Fix notes alignment

--- a/src/components/Lists/List/Item.module.css
+++ b/src/components/Lists/List/Item.module.css
@@ -33,7 +33,6 @@ div.clickable div {
 div.clickable .notes {
   display: block;
   font-size: 0.8rem;
-  margin-left: 46px;
 }
 
 .icon {
